# NexusMesh

./: .env copy.example  .gitignore  LICENSE  README.md  agent_config.example.yaml  app.py  config.toml  pyproject.toml
agents/decision_agent/: __init__.py  adapter.py  prompt.py  tools.py
agents/doc_authenticity_agent/: __init__.py  prompt.py  tools.py
agents/fraud_agent/: __init__.py  prompt.py  tools.py
agents/intake_agent/: __init__.py  adapter.py  data_store.py  prompt.py  tools.py
agents/policy_agent/: __init__.py  prompt.py  tools.py
agents/regulatory_agent/: __init__.py  prompt.py  tools.py
band/: SafeSendLangGraphAdapter.py  __init__.py  findings_tools.py  init_agents.py  mention_gate.py
data/: mock_fraud_db.json  mock_investigation_history.json  mock_ring_relationships.json  naic_cache.json  sample_claims.csv
data/cases/: CLM-0001.json  CLM-0002.json  CLM-0003.json  CLM-0004.json  CLM-0005.json  CLM-0006.json  CLM-0007.json  CLM-0008.json  CLM-0009.json  CLM-0010.json  CLM-0011.json  CLM-0012.json  CLM-0013.json  CLM-0014.json  CLM-0015.json  CLM-0016.json  CLM-0017.json  CLM-0018.json  CLM-0019.json  CLM-0020.json  _index.json
llm/: client.py
pipeline/: __init__.py  cases.py
storage/: __init__.py  findings_store.py  mongo_assets.py
