[project]
name = "nexusmesh-guard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "band-sdk[langgraph]>=1.0.0",
    "deepagents>=0.6.10",
    "exifread>=3.5.1",
    "fastapi>=0.136.3",
    "jinja2>=3.1.6",
    "kaleido>=1.3.0",
    "langchain>=1.3.9",
    "langchain-anthropic>=1.4.6",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.42",
    "langchain-openai>=1.3.2",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "openai>=2.41.1",
    "pandas>=3.0.3",
    "piexif>=1.1.3",
    "pillow>=12.2.0",
    "playwright>=1.60.0",
    "plotly>=6.8.0",
    "pymongo[srv]>=4.16.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.58.0",
    "thenvoi-sdk>=0.2.11",
    "uvicorn>=0.49.0",
    "weasyprint>=69.0",
]

[dependency-groups]
dev = [
    "mongomock>=4.3.0",
]
